--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
 <div class="container">
 
   <div class="trip-info">
-    <div class="info-box"><h3>🕒 Time</h3><p>2 Days / 1 Night<br>Best in October</p></div>
+    <div class="info-box"><h3>🕒 Time</h3><p>2 Days / 1 Night<br>A cool escape you can enjoy all year long</p></div>
     <div class="info-box"><h3>🚗 Transport</h3><p>Motorbike, Grab, Taxi</p></div>
     <div class="info-box"><h3>💰 Budget</h3><p>1,200,000 – 2,000,000 VND</p></div>
     <div class="info-box"><h3>📍 Locations</h3><p>6 Main Spots</p></div>
@@ -306,7 +306,7 @@
         <span class="fun-badge">🍕 Mountain Food</span>
         <h3>Charcoal-Grilled Mountain Pizza</h3>
         <div class="meta">🍕 Food · 💰 200k/per · 🕛 11:00–20:00 · 📍 Burrata Woodfired Pizza Hẻm 32 Đ. 3/4, Phường 3, Đà Lạt, Lâm Đồng</div>
-        <p>The road is long and a bit challenging, so Grab or taxi is recommended. The pizza is charcoal-grilled and served with real honey—close the jar unless you want bees joining your lunch.</p>
+        <p>The road is long and a bit challenging, so Grab or taxi is recommended. The pizza is wood-grilled and served with real honey—close the jar unless you want bees joining your lunch.</p>
       </div>
     </div>
 
