Update content for Da Lat travel guide

--- a/index.html
+++ b/index.html
@@ -243,8 +243,8 @@
   <div class="hero-overlay"></div>
 
   <div class="hero-content">
-    <h1>2 Days 1 Night in Da Lat</h1>
-    <p>From Pine Forest Camping to Pizza, Hot Pot & Nightlife</p>
+    <h1>From Kayaking in the Forest to Pizza on the Mountain</h1>
+    <p>A slow travel escape above the clouds</p>
   </div>
 </header>
 
@@ -277,7 +277,7 @@
       <img src="coffee1.jpg" alt="Morning Coffee Da Lat">
       <div class="place-content">
         <span class="fun-badge">☕ Chill Stop</span>
-        <h3>Morning Coffee with Market View</h3>
+        <h3>Hot Chocolate, Street Noise & the Smell of Morning Da Lat</h3>
         <div class="meta">☕ Drink · 💰 30k–60k · 🕗 7:00–22:30 · 📍 Cà phê Nga 2a Nguyễn Chí Thanh, Phường 1, Đà Lạt, Lâm Đồng</div>
         <p>Vietnam is famous for phin coffee, but even if you don’t drink coffee, there are many great alternatives. We tried hot chocolate and black seed milk while enjoying the Da Lat Market view.</p>
       </div>
@@ -288,7 +288,7 @@
       <img src="camping.jpg" alt="Forest Camping Da Lat">
       <div class="place-content">
         <span class="fun-badge">🌲 Nature Break</span>
-        <h3>Forest Camping & Lake View</h3>
+        <h3>Drinks, BBQ, Paddle Boards & Board Games — All in One Forest Spot</h3>
         <div class="meta">🏕️ Nature · 💰 80k/per Drink / 350k stay · 🚣 Kayak · 📍 Reo Camping Đ. Hoa Hồng, Phường 4, Đà Lạt, Lâm Đồng</div>
         <p>You can stay overnight or simply visit during the day. We ordered a lemon drink, relaxed by the lake, and enjoyed the fresh pine forest air. Kayak rental is available.</p>
       </div>
@@ -304,7 +304,7 @@
       <img src="pizza.png" alt="Charcoal Pizza Da Lat">
       <div class="place-content">
         <span class="fun-badge">🍕 Mountain Food</span>
-        <h3>Charcoal-Grilled Mountain Pizza</h3>
+        <h3>Eating Wood-Fired Pizza at 1,500m</h3>
         <div class="meta">🍕 Food · 💰 200k/per · 🕛 11:00–20:00 · 📍 Burrata Woodfired Pizza Hẻm 32 Đ. 3/4, Phường 3, Đà Lạt, Lâm Đồng</div>
         <p>The road is long and a bit challenging, so Grab or taxi is recommended. The pizza is wood-grilled and served with real honey—close the jar unless you want bees joining your lunch.</p>
       </div>
@@ -315,7 +315,7 @@
       <img src="hotpot.png" alt="Herbal Chicken Hot Pot">
       <div class="place-content">
         <span class="fun-badge">🍲 Comfort Food</span>
-        <h3>Herbal Chicken Hot Pot</h3>
+        <h3>Ending a Cool Day with a Steaming Herbal Chicken Hot Pot</h3>
         <div class="meta">🍲 Dinner · 💰 250k–400k · 🕖 17:00–22:00 · 📍 Mận 19 Lê Văn Tám, Phường 10, Đà Lạt, Lâm Đồng</div>
         <p>The broth is naturally sweet and aromatic, combining chicken flavor with traditional Chinese herbs like ginseng, red dates, and goji berries. Perfect for cool evenings.</p>
       </div>
@@ -326,7 +326,7 @@
       <img src="bar.jpg" alt="Da Lat Night Bar">
       <div class="place-content">
         <span class="fun-badge">🍸 Night Vibes</span>
-        <h3>Local Bar with DJ</h3>
+        <h3>Where the Night Ends with Music and a Smile</h3>
         <div class="meta">🍸 Nightlife · 💰 100k–200k · 🎶 DJ · 📍 DEEM 1 hẻm 20D Đường 3/4, Phường 3, Đà Lạt, Lâm Đồng</div>
         <p>Great music, fun crowd, and creative cocktails. A relaxed but lively atmosphere to end your Da Lat trip.</p>
       </div>
